<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/movies_xml_padding"
    android:background="@android:color/white"
    android:elevation="1dp"
    android:layout_margin="@dimen/movies_xml_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginEnd="@dimen/poster_margin_end"
            android:contentDescription="@string/movie_poster_desc"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_text"
                android:textStyle="bold"
                android:textSize="@dimen/movie_title_text" />

            <TextView
                android:id="@+id/yearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_text"
                android:textSize="@dimen/movie_list_text" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_text"
                android:textSize="@dimen/movie_list_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="@dimen/layout_edit_button_margin">

        <Button
            android:id="@+id/editButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_text"
            android:paddingHorizontal="@dimen/edit_padding" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button_text"
            android:paddingHorizontal="@dimen/delete_padding"
            android:layout_marginStart="@dimen/delete_button_start_margin" />
    </LinearLayout>

</LinearLayout>